include(FetchContent)
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
)

set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

add_executable(Main)
target_sources(Main PRIVATE main.cpp)

add_executable(
  cache_test
  cache_test.cc
)

target_link_libraries(
  cache_test
  GTest::gtest_main
)

include(GoogleTest)
gtest_discover_tests(cache_test)
